name:                throw-example
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ivanovs-4/throw-example#readme
license:             BSD3
license-file:        LICENSE
author:              Sergey Ivanov
maintainer:          ivanovs-4@yandex.ru
copyright:           (c) 2018 Hexresearch Team
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
        Throw
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , aeson-iproute
                     , exceptions
                     , http-client
                     , interpolatedstring-perl6
                     , iproute
                     , mtl
                     , servant
                     , servant-client
                     , swagger2
                     , text
                     , time
  default-language:    Haskell2010
  default-extensions:
    DataKinds
    DeriveDataTypeable
    DeriveFunctor
    DeriveGeneric
    GeneralizedNewtypeDeriving
    OverloadedStrings
    QuasiQuotes
    RecordWildCards
    ScopedTypeVariables
    TemplateHaskell
    TypeOperators

executable run-throw-example
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , interpolatedstring-perl6
                     , throw-example
  default-language:    Haskell2010
  default-extensions:
    LambdaCase
    OverloadedStrings
    QuasiQuotes
    ScopedTypeVariables
    TemplateHaskell
